lab-1_2/parser.output
Terminals unused in grammar

    ENUM
    STRUCT
    UNION
    SHORT
    LONG
    SIGNED
    UNSIGNED
    REGISTER
    GOTO
    SIZEOF
    TYPEDEF
    DO
    ELSEIF
    DEFINE
    UNDEF
    IFDEF
    IFNDEF
    PPIF
    PPELSE
    ENDIF
    RETURN
    DOT
    STRUCTPOINT
    SINQUOTE
    SFTLEFT
    SFTRIGHT
    SHORTADD
    SHORTMUL
    SHORTDIV
    SHORTSUB
    SHORTMOD
    ANDAND
    OROR


State 194 conflicts: 1 shift/reduce
State 248 conflicts: 1 shift/reduce
State 273 conflicts: 1 shift/reduce
State 283 conflicts: 1 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: Prog

    2 Prog: INCLUDE HEADER Prog
    3     | Main Prog
    4     | error
    5     | VarDeclr ';' Prog
    6     | VarInit ';' Prog
    7     | ArrayDeclr ';' Prog
    8     | ε

    9 Type: INT
   10     | CHAR
   11     | FLOAT
   12     | DOUBLE
   13     | VOID

   14 TypeSpecifier: CONST TypeSpecifier
   15              | STATIC
   16              | EXTERN
   17              | VOLATILE
   18              | AUTO
   19              | CONST

   20 TypeList: Type TypeSpecifier
   21         | TypeSpecifier Type
   22         | Type

   23 Main: TypeList MAIN '(' MainArg1 ')' '{' Body '}'

   24 MainArg1: INT ID ',' MainArg2
   25         | INT ID
   26         | ε

   27 MainArg2: CHAR '*' '*' ID ',' MainArg3
   28         | CHAR '*' ID '[' ']' ',' MainArg3
   29         | CHAR '*' ID '[' ']'
   30         | CHAR '*' '*' ID
   31         | ε

   32 MainArg3: CHAR '*' '*' ID
   33         | CHAR '*' ID '[' ']'
   34         | ε

   35 LoopStmt: BREAK ';'
   36         | VarDeclr ';'
   37         | VarInit ';'
   38         | ArrayDeclr ';'
   39         | LoopIfCond
   40         | WhileLoop
   41         | ForLoop
   42         | SwitchCond
   43         | ';'

   44 SnglStmt: VarDeclr ';'
   45         | VarInit ';'
   46         | ArrayDeclr ';'
   47         | IfCond
   48         | WhileLoop
   49         | ForLoop
   50         | SwitchCond
   51         | ';'

   52 LoopBody: BREAK ';' LoopBody
   53         | VarDeclr ';' LoopBody
   54         | VarInit ';' LoopBody
   55         | ArrayDeclr ';' LoopBody
   56         | LoopIfCond LoopBody
   57         | WhileLoop LoopBody
   58         | ForLoop LoopBody
   59         | SwitchCond LoopBody
   60         | ε

   61 Body: VarDeclr ';' Body
   62     | VarInit ';' Body
   63     | ArrayDeclr ';' Body
   64     | IfCond Body
   65     | WhileLoop Body
   66     | ForLoop Body
   67     | SwitchCond Body
   68     | ε

   69 VarDeclr: TypeList VarList

   70 VarList: ID ',' VarList
   71        | ID '=' VarInit ',' VarList
   72        | ID
   73        | ID '=' VarInit

   74 VarInit: Expr
   75        | ID '=' Expr
   76        | IncDec
   77        | IncDec Expr
   78        | ID '=' STRLITERAL

   79 IncDec: ID INC
   80       | ID DEC
   81       | INC ID
   82       | DEC ID

   83 Expr: Expr Relop E
   84     | E

   85 E: E '+' T
   86  | E '-' T
   87  | T

   88 T: T '*' F
   89  | T '/' F
   90  | F

   91 F: NUM
   92  | INTEGER
   93  | ID
   94  | CHARACTER
   95  | '(' Condition ')'
   96  | '!' ID
   97  | '!' INTEGER
   98  | '!' NUM
   99  | '!' CHARACTER
  100  | '!' '(' Condition ')'

  101 Condition: VarInit Logical Condition
  102          | VarInit

  103 Logical: '&' '&'
  104        | '|' '|'

  105 Relop: LESSER
  106      | LESSEREQ
  107      | GREATER
  108      | GREATEREQ
  109      | EQCOMP
  110      | NOTEQ

  111 ArrayDeclr: TypeList ArrayList

  112 ArrayList: ID ArrayDim ',' ArrayList
  113          | ID ArrayDim
  114          | ID ArrayDim '=' '{' ArrayInit '}' ',' ArrayList
  115          | ID ArrayDim '=' '{' ArrayInit '}'
  116          | ID ArrayDim '=' STRLITERAL

  117 ArrayDim: '[' INTEGER ']' ArrayDim
  118         | '[' INTEGER ']'
  119         | '[' ID ']' ArrayDim
  120         | '[' ID ']'
  121         | '[' ']' ArrayDim
  122         | '[' ']'

  123 ArrayInit: Expr ',' ArrayInit
  124          | Expr
  125          | ε

  126 IfCond: IF '(' Condition ')' SnglStmt ElseCond
  127       | IF '(' Condition ')' '{' Body '}' ElseCond
  128       | IF '(' Condition ')' SnglStmt
  129       | IF '(' Condition ')' '{' Body '}'

  130 LoopIfCond: IF '(' Condition ')' LoopStmt LoopElseCond
  131           | IF '(' Condition ')' '{' LoopBody '}' LoopElseCond
  132           | IF '(' Condition ')' LoopStmt
  133           | IF '(' Condition ')' '{' LoopBody '}'

  134 ElseCond: ELSE SnglStmt
  135         | ELSE '{' Body '}'

  136 LoopElseCond: ELSE LoopStmt
  137             | ELSE '{' LoopBody '}'

  138 WhileLoop: WHILE '(' Condition ')' LoopStmt
  139          | WHILE '(' Condition ')' '{' LoopBody '}'

  140 ForLoop: FOR '(' ForInit ';' ForCond ';' ForCond ')' LoopStmt
  141        | FOR '(' ForInit ';' ForCond ';' ForCond ')' '{' LoopBody '}'

  142 ForInit: VarDeclr
  143        | ForCond

  144 ForCond: Condition
  145        | ε

  146 SwitchCond: SWITCH '(' VarInit ')' '{' CaseList '}'
  147           | SWITCH '(' VarInit ')' CASE INTEGER ':' LoopStmt
  148           | SWITCH '(' VarInit ')' DEFAULT ':' LoopStmt

  149 CaseList: Case
  150         | Case CaseList

  151 Case: CASE INTEGER ':' LoopStmt
  152     | DEFAULT ':' LoopStmt


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 96 97 98 99 100
    '&' (38) 103
    '(' (40) 23 95 100 126 127 128 129 130 131 132 133 138 139 140 141 146 147 148
    ')' (41) 23 95 100 126 127 128 129 130 131 132 133 138 139 140 141 146 147 148
    '*' (42) 27 28 29 30 32 33 88
    '+' (43) 85
    ',' (44) 24 27 28 70 71 112 114 123
    '-' (45) 86
    '/' (47) 89
    ':' (58) 147 148 151 152
    ';' (59) 5 6 7 35 36 37 38 43 44 45 46 51 52 53 54 55 61 62 63 140 141
    '=' (61) 71 73 75 78 114 115 116
    '[' (91) 28 29 33 117 118 119 120 121 122
    ']' (93) 28 29 33 117 118 119 120 121 122
    '{' (123) 23 114 115 127 129 131 133 135 137 139 141 146
    '|' (124) 104
    '}' (125) 23 114 115 127 129 131 133 135 137 139 141 146
    error (256) 4
    VOID (258) 13
    INT (259) 9 24 25
    FLOAT (260) 11
    CHAR (261) 10 27 28 29 30 32 33
    DOUBLE (262) 12
    ENUM (263)
    STRUCT (264)
    UNION (265)
    SHORT (266)
    LONG (267)
    SIGNED (268)
    UNSIGNED (269)
    AUTO (270) 18
    STATIC (271) 15
    EXTERN (272) 16
    VOLATILE (273) 17
    CONST (274) 14 19
    REGISTER (275)
    GOTO (276)
    SIZEOF (277)
    TYPEDEF (278)
    WHILE (279) 138 139
    FOR (280) 140 141
    DO (281)
    BREAK (282) 35 52
    IF (283) 126 127 128 129 130 131 132 133
    ELSE (284) 134 135 136 137
    ELSEIF (285)
    SWITCH (286) 146 147 148
    DEFAULT (287) 148 152
    CASE (288) 147 151
    INCLUDE (289) 2
    DEFINE (290)
    UNDEF (291)
    IFDEF (292)
    IFNDEF (293)
    PPIF (294)
    PPELSE (295)
    ENDIF (296)
    HEADER (297) 2
    MAIN (298) 23
    RETURN (299)
    CHARACTER (300) 94 99
    ID (301) 24 25 27 28 29 30 32 33 70 71 72 73 75 78 79 80 81 82 93 96 112 113 114 115 116 119 120
    INTEGER (302) 92 97 117 118 147 151
    NUM (303) 91 98
    STRLITERAL (304) 78 116
    DOT (305)
    STRUCTPOINT (306)
    SINQUOTE (307)
    INC (308) 79 81
    DEC (309) 80 82
    SFTLEFT (310)
    SFTRIGHT (311)
    SHORTADD (312)
    SHORTMUL (313)
    SHORTDIV (314)
    SHORTSUB (315)
    SHORTMOD (316)
    LESSER (317) 105
    LESSEREQ (318) 106
    GREATER (319) 107
    GREATEREQ (320) 108
    EQCOMP (321) 109
    NOTEQ (322) 110
    ANDAND (323)
    OROR (324)


Nonterminals, with rules where they appear

    $accept (87)
        on left: 0
    Start (88)
        on left: 1
        on right: 0
    Prog (89)
        on left: 2 3 4 5 6 7 8
        on right: 1 2 3 5 6 7
    Type (90)
        on left: 9 10 11 12 13
        on right: 20 21 22
    TypeSpecifier (91)
        on left: 14 15 16 17 18 19
        on right: 14 20 21
    TypeList (92)
        on left: 20 21 22
        on right: 23 69 111
    Main (93)
        on left: 23
        on right: 3
    MainArg1 (94)
        on left: 24 25 26
        on right: 23
    MainArg2 (95)
        on left: 27 28 29 30 31
        on right: 24
    MainArg3 (96)
        on left: 32 33 34
        on right: 27 28
    LoopStmt (97)
        on left: 35 36 37 38 39 40 41 42 43
        on right: 130 132 136 138 140 147 148 151 152
    SnglStmt (98)
        on left: 44 45 46 47 48 49 50 51
        on right: 126 128 134
    LoopBody (99)
        on left: 52 53 54 55 56 57 58 59 60
        on right: 52 53 54 55 56 57 58 59 131 133 137 139 141
    Body (100)
        on left: 61 62 63 64 65 66 67 68
        on right: 23 61 62 63 64 65 66 67 127 129 135
    VarDeclr (101)
        on left: 69
        on right: 5 36 44 53 61 142
    VarList (102)
        on left: 70 71 72 73
        on right: 69 70 71
    VarInit (103)
        on left: 74 75 76 77 78
        on right: 6 37 45 54 62 71 73 101 102 146 147 148
    IncDec (104)
        on left: 79 80 81 82
        on right: 76 77
    Expr (105)
        on left: 83 84
        on right: 74 75 77 83 123 124
    E (106)
        on left: 85 86 87
        on right: 83 84 85 86
    T (107)
        on left: 88 89 90
        on right: 85 86 87 88 89
    F (108)
        on left: 91 92 93 94 95 96 97 98 99 100
        on right: 88 89 90
    Condition (109)
        on left: 101 102
        on right: 95 100 101 126 127 128 129 130 131 132 133 138 139 144
    Logical (110)
        on left: 103 104
        on right: 101
    Relop (111)
        on left: 105 106 107 108 109 110
        on right: 83
    ArrayDeclr (112)
        on left: 111
        on right: 7 38 46 55 63
    ArrayList (113)
        on left: 112 113 114 115 116
        on right: 111 112 114
    ArrayDim (114)
        on left: 117 118 119 120 121 122
        on right: 112 113 114 115 116 117 119 121
    ArrayInit (115)
        on left: 123 124 125
        on right: 114 115 123
    IfCond (116)
        on left: 126 127 128 129
        on right: 47 64
    LoopIfCond (117)
        on left: 130 131 132 133
        on right: 39 56
    ElseCond (118)
        on left: 134 135
        on right: 126 127
    LoopElseCond (119)
        on left: 136 137
        on right: 130 131
    WhileLoop (120)
        on left: 138 139
        on right: 40 48 57 65
    ForLoop (121)
        on left: 140 141
        on right: 41 49 58 66
    ForInit (122)
        on left: 142 143
        on right: 140 141
    ForCond (123)
        on left: 144 145
        on right: 140 141 143
    SwitchCond (124)
        on left: 146 147 148
        on right: 42 50 59 67
    CaseList (125)
        on left: 149 150
        on right: 146 150
    Case (126)
        on left: 151 152
        on right: 149 150


State 0

    0 $accept: • Start $end

    error      shift, and go to state 1
    VOID       shift, and go to state 2
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    CHAR       shift, and go to state 5
    DOUBLE     shift, and go to state 6
    AUTO       shift, and go to state 7
    STATIC     shift, and go to state 8
    EXTERN     shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CONST      shift, and go to state 11
    INCLUDE    shift, and go to state 12
    CHARACTER  shift, and go to state 13
    ID         shift, and go to state 14
    INTEGER    shift, and go to state 15
    NUM        shift, and go to state 16
    INC        shift, and go to state 17
    DEC        shift, and go to state 18
    '('        shift, and go to state 19
    '!'        shift, and go to state 20

    $end  reduce using rule 8 (Prog)

    Start          go to state 21
    Prog           go to state 22
    Type           go to state 23
    TypeSpecifier  go to state 24
    TypeList       go to state 25
    Main           go to state 26
    VarDeclr       go to state 27
    VarInit        go to state 28
    IncDec         go to state 29
    Expr           go to state 30
    E              go to state 31
    T              go to state 32
    F              go to state 33
    ArrayDeclr     go to state 34


State 1

    4 Prog: error •

    $default  reduce using rule 4 (Prog)


State 2

   13 Type: VOID •

    $default  reduce using rule 13 (Type)


State 3

    9 Type: INT •

    $default  reduce using rule 9 (Type)


State 4

   11 Type: FLOAT •

    $default  reduce using rule 11 (Type)


State 5

   10 Type: CHAR •

    $default  reduce using rule 10 (Type)


State 6

   12 Type: DOUBLE •

    $default  reduce using rule 12 (Type)


State 7

   18 TypeSpecifier: AUTO •

    $default  reduce using rule 18 (TypeSpecifier)


State 8

   15 TypeSpecifier: STATIC •

    $default  reduce using rule 15 (TypeSpecifier)


State 9

   16 TypeSpecifier: EXTERN •

    $default  reduce using rule 16 (TypeSpecifier)


State 10

   17 TypeSpecifier: VOLATILE •

    $default  reduce using rule 17 (TypeSpecifier)


State 11

   14 TypeSpecifier: CONST • TypeSpecifier
   19              | CONST •

    AUTO      shift, and go to state 7
    STATIC    shift, and go to state 8
    EXTERN    shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11

    $default  reduce using rule 19 (TypeSpecifier)

    TypeSpecifier  go to state 35


State 12

    2 Prog: INCLUDE • HEADER Prog

    HEADER  shift, and go to state 36


State 13

   94 F: CHARACTER •

    $default  reduce using rule 94 (F)


State 14

   75 VarInit: ID • '=' Expr
   78        | ID • '=' STRLITERAL
   79 IncDec: ID • INC
   80       | ID • DEC
   93 F: ID •

    INC  shift, and go to state 37
    DEC  shift, and go to state 38
    '='  shift, and go to state 39

    $default  reduce using rule 93 (F)


State 15

   92 F: INTEGER •

    $default  reduce using rule 92 (F)


State 16

   91 F: NUM •

    $default  reduce using rule 91 (F)


State 17

   81 IncDec: INC • ID

    ID  shift, and go to state 40


State 18

   82 IncDec: DEC • ID

    ID  shift, and go to state 41


State 19

   95 F: '(' • Condition ')'

    CHARACTER  shift, and go to state 13
    ID         shift, and go to state 14
    INTEGER    shift, and go to state 15
    NUM        shift, and go to state 16
    INC        shift, and go to state 17
    DEC        shift, and go to state 18
    '('        shift, and go to state 19
    '!'        shift, and go to state 20

    VarInit    go to state 42
    IncDec     go to state 29
    Expr       go to state 30
    E          go to state 31
    T          go to state 32
    F          go to state 33
    Condition  go to state 43


State 20

   96 F: '!' • ID
   97  | '!' • INTEGER
   98  | '!' • NUM
   99  | '!' • CHARACTER
  100  | '!' • '(' Condition ')'

    CHARACTER  shift, and go to state 44
    ID         shift, and go to state 45
    INTEGER    shift, and go to state 46
    NUM        shift, and go to state 47
    '('        shift, and go to state 48


State 21

    0 $accept: Start • $end

    $end  shift, and go to state 49


State 22

    1 Start: Prog •

    $default  reduce using rule 1 (Start)


State 23

   20 TypeList: Type • TypeSpecifier
   22         | Type •

    AUTO      shift, and go to state 7
    STATIC    shift, and go to state 8
    EXTERN    shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11

    $default  reduce using rule 22 (TypeList)

    TypeSpecifier  go to state 50


State 24

   21 TypeList: TypeSpecifier • Type

    VOID    shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    CHAR    shift, and go to state 5
    DOUBLE  shift, and go to state 6

    Type  go to state 51


State 25

   23 Main: TypeList • MAIN '(' MainArg1 ')' '{' Body '}'
   69 VarDeclr: TypeList • VarList
  111 ArrayDeclr: TypeList • ArrayList

    MAIN  shift, and go to state 52
    ID    shift, and go to state 53

    VarList    go to state 54
    ArrayList  go to state 55


State 26

    3 Prog: Main • Prog

    error      shift, and go to state 1
    VOID       shift, and go to state 2
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    CHAR       shift, and go to state 5
    DOUBLE     shift, and go to state 6
    AUTO       shift, and go to state 7
    STATIC     shift, and go to state 8
    EXTERN     shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CONST      shift, and go to state 11
    INCLUDE    shift, and go to state 12
    CHARACTER  shift, and go to state 13
    ID         shift, and go to state 14
    INTEGER    shift, and go to state 15
    NUM        shift, and go to state 16
    INC        shift, and go to state 17
    DEC        shift, and go to state 18
    '('        shift, and go to state 19
    '!'        shift, and go to state 20

    $end  reduce using rule 8 (Prog)

    Prog           go to state 56
    Type           go to state 23
    TypeSpecifier  go to state 24
    TypeList       go to state 25
    Main           go to state 26
    VarDeclr       go to state 27
    VarInit        go to state 28
    IncDec         go to state 29
    Expr           go to state 30
    E              go to state 31
    T              go to state 32
    F              go to state 33
    ArrayDeclr     go to state 34


State 27

    5 Prog: VarDeclr • ';' Prog

    ';'  shift, and go to state 57


State 28

    6 Prog: VarInit • ';' Prog

    ';'  shift, and go to state 58


State 29

   76 VarInit: IncDec •
   77        | IncDec • Expr

    CHARACTER  shift, and go to state 13
    ID         shift, and go to state 59
    INTEGER    shift, and go to state 15
    NUM        shift, and go to state 16
    '('        shift, and go to state 19
    '!'        shift, and go to state 20

    $default  reduce using rule 76 (VarInit)

    Expr  go to state 60
    E     go to state 31
    T     go to state 32
    F     go to state 33


State 30

   74 VarInit: Expr •
   83 Expr: Expr • Relop E

    LESSER     shift, and go to state 61
    LESSEREQ   shift, and go to state 62
    GREATER    shift, and go to state 63
    GREATEREQ  shift, and go to state 64
    EQCOMP     shift, and go to state 65
    NOTEQ      shift, and go to state 66

    $default  reduce using rule 74 (VarInit)

    Relop  go to state 67


State 31

   84 Expr: E •
   85 E: E • '+' T
   86  | E • '-' T

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69

    $default  reduce using rule 84 (Expr)


State 32

   87 E: T •
   88 T: T • '*' F
   89  | T • '/' F

    '*'  shift, and go to state 70
    '/'  shift, and go to state 71

    $default  reduce using rule 87 (E)


State 33

   90 T: F •

    $default  reduce using rule 90 (T)


State 34

    7 Prog: ArrayDeclr • ';' Prog

    ';'  shift, and go to state 72


State 35

   14 TypeSpecifier: CONST TypeSpecifier •

    $default  reduce using rule 14 (TypeSpecifier)


State 36

    2 Prog: INCLUDE HEADER • Prog

    error      shift, and go to state 1
    VOID       shift, and go to state 2
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    CHAR       shift, and go to state 5
    DOUBLE     shift, and go to state 6
    AUTO       shift, and go to state 7
    STATIC     shift, and go to state 8
    EXTERN     shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CONST      shift, and go to state 11
    INCLUDE    shift, and go to state 12
    CHARACTER  shift, and go to state 13
    ID         shift, and go to state 14
    INTEGER    shift, and go to state 15
    NUM        shift, and go to state 16
    INC        shift, and go to state 17
    DEC        shift, and go to state 18
    '('        shift, and go to state 19
    '!'        shift, and go to state 20

    $end  reduce using rule 8 (Prog)

    Prog           go to state 73
    Type           go to state 23
    TypeSpecifier  go to state 24
    TypeList       go to state 25
    Main           go to state 26
    VarDeclr       go to state 27
    VarInit        go to state 28
    IncDec         go to state 29
    Expr           go to state 30
    E              go to state 31
    T              go to state 32
    F              go to state 33
    ArrayDeclr     go to state 34


State 37

   79 IncDec: ID INC •

    $default  reduce using rule 79 (IncDec)


State 38

   80 IncDec: ID DEC •

    $default  reduce using rule 80 (IncDec)


State 39

   75 VarInit: ID '=' • Expr
   78        | ID '=' • STRLITERAL

    CHARACTER   shift, and go to state 13
    ID          shift, and go to state 59
    INTEGER     shift, and go to state 15
    NUM         shift, and go to state 16
    STRLITERAL  shift, and go to state 74
    '('         shift, and go to state 19
    '!'         shift, and go to state 20

    Expr  go to state 75
    E     go to state 31
    T     go to state 32
    F     go to state 33


State 40

   81 IncDec: INC ID •

    $default  reduce using rule 81 (IncDec)


State 41

   82 IncDec: DEC ID •

    $default  reduce using rule 82 (IncDec)


State 42

  101 Condition: VarInit • Logical Condition
  102          | VarInit •

    '&'  shift, and go to state 76
    '|'  shift, and go to state 77

    $default  reduce using rule 102 (Condition)

    Logical  go to state 78


State 43

   95 F: '(' Condition • ')'

    ')'  shift, and go to state 79


State 44

   99 F: '!' CHARACTER •

    $default  reduce using rule 99 (F)


State 45

   96 F: '!' ID •

    $default  reduce using rule 96 (F)


State 46

   97 F: '!' INTEGER •

    $default  reduce using rule 97 (F)


State 47

   98 F: '!' NUM •

    $default  reduce using rule 98 (F)


State 48

  100 F: '!' '(' • Condition ')'

    CHARACTER  shift, and go to state 13
    ID         shift, and go to state 14
    INTEGER    shift, and go to state 15
    NUM        shift, and go to state 16
    INC        shift, and go to state 17
    DEC        shift, and go to state 18
    '('        shift, and go to state 19
    '!'        shift, and go to state 20

    VarInit    go to state 42
    IncDec     go to state 29
    Expr       go to state 30
    E          go to state 31
    T          go to state 32
    F          go to state 33
    Condition  go to state 80


State 49

    0 $accept: Start $end •

    $default  accept


State 50

   20 TypeList: Type TypeSpecifier •

    $default  reduce using rule 20 (TypeList)


State 51

   21 TypeList: TypeSpecifier Type •

    $default  reduce using rule 21 (TypeList)


State 52

   23 Main: TypeList MAIN • '(' MainArg1 ')' '{' Body '}'

    '('  shift, and go to state 81


State 53

   70 VarList: ID • ',' VarList
   71        | ID • '=' VarInit ',' VarList
   72        | ID •
   73        | ID • '=' VarInit
  112 ArrayList: ID • ArrayDim ',' ArrayList
  113          | ID • ArrayDim
  114          | ID • ArrayDim '=' '{' ArrayInit '}' ',' ArrayList
  115          | ID • ArrayDim '=' '{' ArrayInit '}'
  116          | ID • ArrayDim '=' STRLITERAL

    ','  shift, and go to state 82
    '['  shift, and go to state 83
    '='  shift, and go to state 84

    $default  reduce using rule 72 (VarList)

    ArrayDim  go to state 85


State 54

   69 VarDeclr: TypeList VarList •

    $default  reduce using rule 69 (VarDeclr)


State 55

  111 ArrayDeclr: TypeList ArrayList •

    $default  reduce using rule 111 (ArrayDeclr)


State 56

    3 Prog: Main Prog •

    $default  reduce using rule 3 (Prog)


State 57

    5 Prog: VarDeclr ';' • Prog

    error      shift, and go to state 1
    VOID       shift, and go to state 2
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    CHAR       shift, and go to state 5
    DOUBLE     shift, and go to state 6
    AUTO       shift, and go to state 7
    STATIC     shift, and go to state 8
    EXTERN     shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CONST      shift, and go to state 11
    INCLUDE    shift, and go to state 12
    CHARACTER  shift, and go to state 13
    ID         shift, and go to state 14
    INTEGER    shift, and go to state 15
    NUM        shift, and go to state 16
    INC        shift, and go to state 17
    DEC        shift, and go to state 18
    '('        shift, and go to state 19
    '!'        shift, and go to state 20

    $end  reduce using rule 8 (Prog)

    Prog           go to state 86
    Type           go to state 23
    TypeSpecifier  go to state 24
    TypeList       go to state 25
    Main           go to state 26
    VarDeclr       go to state 27
    VarInit        go to state 28
    IncDec         go to state 29
    Expr           go to state 30
    E              go to state 31
    T              go to state 32
    F              go to state 33
    ArrayDeclr     go to state 34


State 58

    6 Prog: VarInit ';' • Prog
